# kao

./: .gitignore  README.md  package-lock.json  package.json  roadmapforlater.txt
src/: app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Styles.css  Types.ts
src/lib/Components/: Picker.svelte
src/lib/Data/: Kaomoji.json
src/routes/: +page.svelte
