[package]
name = "kao"
version = "0.1.0"
description = "kao"
authors = ["KleaSCM"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional: Enigo behind a feature so "no-autopaste".
enigo = { version = "0.6.1", optional = true }

[features]
default = ["autopaste"]
autopaste = ["dep:enigo"]

# Windows-only deps (do NOT include these on other platforms)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
] }

